--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -11,8 +11,8 @@
 
         <TextView
             android:id="@+id/t_welcome"
-            android:layout_width="256dp"
-            android:layout_height="39dp"
+            android:layout_width="262dp"
+            android:layout_height="59dp"
             android:layout_marginStart="88dp"
             android:layout_marginTop="72dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -20,9 +20,10 @@
 
         <ListView
             android:id="@+id/recent_highest_listview"
-            android:layout_width="410dp"
-            android:layout_height="457dp"
-            android:layout_marginTop="122dp"
+            android:layout_width="403dp"
+            android:layout_height="563dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="160dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
