--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -11,10 +11,12 @@
 
         <TextView
             android:id="@+id/t_welcome"
-            android:layout_width="262dp"
+            android:layout_width="309dp"
             android:layout_height="59dp"
-            android:layout_marginStart="88dp"
-            android:layout_marginTop="72dp"
+            android:layout_marginStart="96dp"
+            android:layout_marginTop="100dp"
+            android:background="#FFFFFF"
+            android:backgroundTint="#FFFFFF"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -29,13 +31,24 @@
 
         <TextView
             android:id="@+id/home_title"
-            android:layout_width="373dp"
-            android:layout_height="46dp"
+            android:layout_width="404dp"
+            android:layout_height="78dp"
             android:layout_marginTop="16dp"
+            android:background="@color/colorAccent"
             android:text="Home Screen"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="74dp"
+            android:layout_height="76dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="84dp"
+            app:layout_constraintStart_toEndOf="@+id/home_title"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/btn_star_big_on" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
