--- a/app/src/main/res/layout/maps_fragement.xml
+++ b/app/src/main/res/layout/maps_fragement.xml
@@ -2,14 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/tvmap"
-        style="@android:style/TextAppearance.Large"
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:map="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:text="Map"
-        android:textSize="24dp"
-        android:textStyle="bold" />
+        tools:context=".MapsActivity" />
 </LinearLayout>
